# EvalAgent

./: .gitignore  README.md
backend/: Dockerfile  TODO.txt  clear_logs.ps1  clear_logs.sh  docker-compose.example.yaml  env.example.py  pyproject.toml  show_files.sh
backend/alembic/versions/: 0933bd48a905_.py  2b6e1e8b3b0a_add_app_version_lineage.py  3c9b7c4a1d2e_add_lineage_cycle_trigger.py  4f1c2d9a8b7e_add_bug_tracing_tables.py  618517873f70_.py  7e3c1a5b6f0a_add_unique_app_name.py  9f6b3b7b6b10_add_apps_and_versions.py  d6c8527b41d0_.py
backend/app_evaluation_agent/: logging_utils.py  main.py  realtime.py  worker.py
backend/app_evaluation_agent/api/: dependencies.py
backend/app_evaluation_agent/api/v1/: apps.py  bugs.py  evaluations.py  events.py  logs.py  testcases.py  testplans.py  vision.py
backend/app_evaluation_agent/integrations/: s3_client.py  virus_scanner.py
backend/app_evaluation_agent/schemas/: agent.py  app.py  app_version.py  bug.py  evaluation.py  testcase.py  testplan.py
backend/app_evaluation_agent/services/: apps.py  bugs.py  evaluations.py  prompts.py  testcases.py  vllm_coordinate_mapper.py
backend/app_evaluation_agent/services/agents/: __init__.py  analyzer.py  bug_triage.py  coordinator.py  llm_client.py  planner.py  prompt_loader.py  summarizer.py
backend/app_evaluation_agent/services/prompts/: system_prompt.md  user_prompt.md
backend/app_evaluation_agent/storage/: database.py  models.py
backend/app_evaluation_agent/utils/: config.py
backend/config/: settings.example.toml
backend/tests/: test_coordinator_standalone.py  test_evaluation_deletion.py  test_last_focus_reverse_mapping.py  test_next_test_case_assignment.py  test_regenerate_summary.py  test_summarizer_standalone.py  test_vllm_coordinate_bias.py  test_vllm_coordinate_mapper.py
(+82 files in other folders)
